--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "bootstrap": "^4.6.2",
+    "countries-list": "^3.0.6",
     "dompurify": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
