--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^4.6.2",
     "countries-list": "^3.0.6",
+    "cryptocompare": "^1.0.0",
     "dompurify": "^3.0.6",
     "i18next": "^23.7.3",
     "i18next-browser-languagedetector": "^7.2.0",
